--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    pass"
+    "    number = len(travel_destinations)\n",
+    "    return number"
    ]
   },
   {
@@ -84,7 +85,8 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    pass"
+    "    destination = travel_destinations[0]\n",
+    "    return destination"
    ]
   },
   {
@@ -99,9 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'finland'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['finland', 'canada', 'croatia']\n",
     "next_up() # 'finland'"
@@ -122,7 +135,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    pass"
+    "    favorite = 'madagascar'\n",
+    "    return favorite"
    ]
   },
   {
@@ -143,13 +157,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'croatia'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def favorite_destination():\n",
+    "    for destination in travel_destinations:\n",
+    "        travel_destinations.append('madagascar')\n",
+    "    return new\n",
+    "\n",
+    "travel_destinations[-1]\n",
+    " # 'madagascar\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "favorite_destination()\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "favorite_destination()"
    ]
   },
   {
@@ -229,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
