Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,8 +211,18 @@
     "        travel_destinations.append('madagascar')\n",
     "    return new\n",
     "\n",
+    "FA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "travel_destinations[-1]\n",
-    " # 'madagascar\n"
+    " # 'madagascar"
    ]
   },
   {
