Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'croatia'"
+       "<function __main__.favorite_destination()>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
     "        travel_destinations.append('madagascar')\n",
     "    return new\n",
     "\n",
-    "FA\n"
+    "favorite_destination\n"
    ]
   },
   {
