--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
     "        travel_destinations.append('madagascar')\n",
     "    return new\n",
     "\n",
-    "favorite_destination\n"
+    "favorite_destination\n",
+    "travel_destin\n"
    ]
   },
   {
