--- a/index.ipynb
+++ b/index.ipynb
@@ -190,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.favorite_destination()>"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,10 +209,7 @@
     "def favorite_destination():\n",
     "    for destination in travel_destinations:\n",
     "        travel_destinations.append('madagascar')\n",
-    "    return new\n",
-    "\n",
-    "favorite_destination\n",
-    "travel_destin\n"
+    "    return new\n"
    ]
   },
   {
