--- a/index.ipynb
+++ b/index.ipynb
@@ -208,8 +208,10 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    for destination in travel_destinations:\n",
-    "        travel_destinations.append('madagascar')\n",
-    "    return new\n"
+    "       new = travel_destinations.append('madagascar')\n",
+    "    return new\n",
+    "\n",
+    "fa"
    ]
   },
   {
