--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     "def favorite_destination():\n",
     "    for destination in travel_destinations:\n",
     "       travel_destinations.append('madagascar')\n",
-    "    return new\n",
+    "    return \n",
     "\n",
     "favorite_destinations"
    ]
