--- a/index.ipynb
+++ b/index.ipynb
@@ -209,8 +209,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    for destination in travel_destinations:\n",
-    "       travel_destinations.append('madagascar')\n",
-    "    return \n",
+    "    return travel_destinations.append('madagas')\n",
     "\n",
     "favorite_destinations"
    ]
