--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    for destination in travel_destinations:\n",
+    "    yo = travel_destinations.append('madagascar')\n",
     "        return travel_destinations.append('madagascar')\n",
     "\n",
     "favorite_destinations"
