--- a/index.ipynb
+++ b/index.ipynb
@@ -190,27 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.favorite_destination()>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    yo = travel_destinations.append('madagascar')\n",
     "    return yo\n",
     "\n",
-    "favorite_destination"
+    "favorite_destination()"
    ]
   },
   {
