--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +198,14 @@
     "def favorite_destination():\n",
     "    yo = travel_destinations.append('madagascar')\n",
     "    return yo\n",
-    "\n",
+    "    return 'madagascar'\n",
     "\n",
     "favorite_destination()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
