Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,31 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-3f74d3ef1852>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-3f74d3ef1852>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return yo and\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination():\n",
-    "    yo = travel_destinations.append('madagascar')\n",
-    "     return 'madagascar'\n",
-    "    return yo\n",
-    "\n",
-    "favorite_destination()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +199,33 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def favorite_destination():\n",
+    "    yo = travel_destinations.append('madagascar')\n",
+    "    return 'madagascar'\n",
+    "    return yo\n",
+    "\n",
+    "favorite_destination()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'madagascar'"
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
