--- a/index.ipynb
+++ b/index.ipynb
@@ -264,13 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "       all_caps = travel_"
+    "       all_caps = travel_destinations.title()"
    ]
   },
   {
