Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,8 +270,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    all_caps = travel_destinations.title()\n",
-    "    return all_caps"
+    "    allcaps = travel_destinations.title()\n",
+    "    return allcaps"
    ]
   },
   {
