Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    \n",
+    "    allcaps = travel\n",
     "    return allcaps"
    ]
   },
