Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,13 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    allcaps = travel\n",
+    "    allcaps = travel_destinations.title()\n",
     "    return allcaps"
    ]
   },
