Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,6 +271,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    \n",
+    "    for destinations in travel_destinations\n",
     "    allcaps = travel_destinations.title()\n",
     "    return allcaps"
    ]
