--- a/index.ipynb
+++ b/index.ipynb
@@ -270,9 +270,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    \n",
+    "    caps_all = []\n",
     "    for destinations in travel_destinations\n",
-    "    allcaps = travel_destinations.title()\n",
+    "    caps\n",
     "    return allcaps"
    ]
   },
