Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,7 @@
     "def capitalize_countries():\n",
     "    caps_all = []\n",
     "    for destinations in travel_destinations\n",
-    "    caps\n",
+    "    caps_all.append\n",
     "    return allcaps"
    ]
   },
