Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,16 +264,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-54-641b915f9362>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-54-641b915f9362>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    caps_all.append(travel_destinations.title())\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    caps_all = []\n",
-    "    for destinations in travel_destinations\n",
-    "    caps_all.append(travel_destinations.title())\n",
-    "    return allcaps"
+    "    for destinations in travel_destinations:\n",
+    "        caps_all.append(travel_destinations.title())\n",
+    "    return caps_all"
    ]
   },
   {
