--- a/index.ipynb
+++ b/index.ipynb
@@ -349,6 +349,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "travel_destinations"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
